--- a/Project15/Project15.vcxproj.filters
+++ b/Project15/Project15.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Tank.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Division.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tank.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Division.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
